# rag_demo

./: .dockerignore  .gitignore  .output.txt  API_DOCS_README.md  API_DOCS_SUMMARY.md  ARCH_PERF_AUDIT_PLAN.md  ASSISTANT_GROWTH_FEATURES.md  ASSISTANT_RAG_MIGRATION_BACKLOG.md  ASSISTANT_RAG_TARGET_ARCHITECTURE.md  BSL_ARM_MOVEMENT_FIX.md  BSL_DIAGNOSTIC_GUIDE.md  BSL_IMPLEMENTATION_SUMMARY.md  BSL_INTEGRATION_GUIDE.md  CHANGELOG  CODEBASE_INTENT_AND_WORKFLOW.md  COMPLIANCE.md  CONTRIBUTING.md  CRITICAL_FIX_SHOULDER_ROLL_SIGN_INVERSION.md  Containerfile  LICENSE  OPEN_CLAUDE_CODE_REFINER_COMPARISON.md  README.md  REFINER_AI_ORCHESTRATION.md  SERVICE_SPLIT_ARCHITECTURE.md  SIMPLX_POSE_MAPPING.md  __init__.py  agentic_workflow.py  analyze_issue_transitions.py  api_docs.py  atlassian_utils.py  best_practices.py  billing_client.py  capabilities.py  capability_analyzer.py  cli.py  config.json  confluence_analysis.py  confluence_report.html  create_jira_connection.py  credentials.py  (+80 more)
assistant_api/: __init__.py  admin_handlers.py  assistant_handlers.py  rag_handlers.py  schemas.py
assistant_pipeline/: __init__.py  contracts.py  dependencies.py  experience.py  service.py
central_store/: __init__.py  assistant.py  base.py  rag.py
config/: ai-routing-profiles.json
container/: entrypoint.sh  nvidia-smi
data/: skills_playbooks.json
docx/: __init__.py
odf/: __init__.py  opendocument.py  teletype.py  text.py
refiner/: __init__.py  agentic_workflow.py  api_docs.py  atlassian_utils.py  best_practices.py  billing_client.py  capabilities.py  capability_analyzer.py  cli.py  config_loader.py  confluence_analysis.py  credentials.py  customers_client.py  delivery_pipeline.py  discover_hierarchy.py  document_schema.py  file_converter.py  frontend_server.py  jira_analysis.py  language_detector.py  llm_providers.py  logging_utils.py  main.py  mcp_client.py  nmchain_client.py  nmstt_contracts.py  platform_selector.py  project_solver.py  rag_engine.py  refiner_ai_aarnn.py  refiner_ai_aer.py  refiner_ai_gail.py  refiner_ai_model_inventory.py  refiner_ai_orchestration.py  refiner_ai_routing_profiles.py  refiner_ai_specialists.py  refiner_central_store.py  refiner_settings.py  refiner_web.py  repo_context.py  (+16 more)
refiner_routes/: __init__.py  admin.py  assistant.py  auth.py  jobs.py  rag.py  voice.py
scripts/: benchmark_refiner_api.py  check_bundle_budgets.py  export_refiner_security_feed.sh  package-release.sh  start_refiner_stack.sh
stt_rust/: Cargo.toml  README.md  install_native_arm64.sh  native_arm64_46core.env  openapi_stt.yaml  refiner-stt-user.service  refiner-stt.service  whisper_cpp_preset.env
stt_rust/src/: main.rs
tests/: conftest.py  test_access_probe.py  test_analyze_issue_transitions.py  test_api_docs.py  test_assistant_admin_handlers.py  test_assistant_bsl_integration.py  test_assistant_experience.py  test_assistant_first_arrival_gate.py  (+117 more)
(+122 files in other folders)
