[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "refiner"
version = "0.1.0"
description = "Jira reporting and analytics utilities with discovery-driven JQL refinement"
readme = "README.md"
authors = [{ name = "neuralmimicry" }]
license = { file = "LICENSE" }
requires-python = ">=3.8"
keywords = ["jira", "reporting", "analytics", "confluence", "worklogs"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
# We intentionally avoid duplicating runtime deps here to keep requirements.txt as the source of truth
# for this repository. When publishing, you may choose to copy them here.

[project.urls]
Homepage = "https://example.com/"

[project.scripts]
refiner = "refiner.cli:main"
# Preferred namespaced CLI (best practice):
# Users can also call `python -m refiner.cli`

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["refiner*", "assistant_api*", "assistant_pipeline*", "central_store*", "refiner_routes*", "docx*", "odf*"]
exclude = ["tests*", "job_data*"]
