[package]
name = "refiner-stt"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1.36", features = ["macros", "rt-multi-thread", "net", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
whisper-rs = "0.11"
symphonia = { version = "0.5", features = ["all"] }
rubato = "0.14"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
